| Bug #50640 | Some messges from ndb_restore should be type "info" instead of "err" | ||
|---|---|---|---|
| Submitted: | 26 Jan 2010 20:23 | Modified: | 15 Feb 2010 15:00 |
| Reporter: | Matthew Montgomery | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.3.31 | OS: | Any |
| Assigned to: | MySQL Verification Team | CPU Architecture: | Any |
| Tags: | Contribution | ||
[26 Jan 2010 20:23]
Matthew Montgomery
[26 Jan 2010 20:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/98243 3088 Matthew Montgomery 2010-01-26 Bug #50640 Some messges from ndb_restore should be type "info" instead of "err" Redirect non-error messages to info fd.
[27 Jan 2010 10:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/98309 3093 Jonas Oreland 2010-01-27 ndb - bug#50640 - fix stdout/stderr printing in ndb_restore wrt rebuilding of indexes
[27 Jan 2010 10:45]
Jonas Oreland
pushed to 6.3.31 and 7.0.11 no doc needed: bug was not in any released version
[12 Feb 2010 14:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/100142 3405 Martin Skold 2010-02-12 [merge] Merge added: mysql-test/extra/rpl_tests/check_type.inc mysql-test/extra/rpl_tests/type_conversions.test mysql-test/suite/rpl/r/rpl_typeconv.result mysql-test/suite/rpl/r/rpl_typeconv_innodb.result mysql-test/suite/rpl/t/rpl_typeconv-slave.opt mysql-test/suite/rpl/t/rpl_typeconv.test mysql-test/suite/rpl/t/rpl_typeconv_innodb.test modified: .bzrignore client/Makefile.am client/mysqlbinlog.cc libmysqld/Makefile.am mysql-test/extra/rpl_tests/rpl_extraSlave_Col.test mysql-test/extra/rpl_tests/rpl_row_basic.test mysql-test/r/mysqlbinlog_row_innodb.result mysql-test/r/mysqlbinlog_row_myisam.result mysql-test/suite/ndb_team/r/rpl_ndb_extraColMaster.result mysql-test/suite/rpl/r/rpl_bug31076.result mysql-test/suite/rpl/r/rpl_colSize.result mysql-test/suite/rpl/r/rpl_extraCol_innodb.result mysql-test/suite/rpl/r/rpl_extraCol_myisam.result mysql-test/suite/rpl/r/rpl_extraColmaster_innodb.result mysql-test/suite/rpl/r/rpl_extraColmaster_myisam.result mysql-test/suite/rpl/r/rpl_row_basic_2myisam.result mysql-test/suite/rpl/r/rpl_row_basic_3innodb.result mysql-test/suite/rpl/r/rpl_row_colSize.result mysql-test/suite/rpl/r/rpl_row_tabledefs_2myisam.result mysql-test/suite/rpl/r/rpl_row_tabledefs_3innodb.result mysql-test/suite/rpl/t/rpl_bug31076.test mysql-test/suite/rpl/t/rpl_colSize.test mysql-test/suite/rpl/t/rpl_row_basic_3innodb.test mysql-test/suite/rpl_ndb/r/rpl_ndb_extraCol.result mysql-test/suite/rpl_ndb/r/rpl_row_basic_7ndb.result sql/field.cc sql/field.h sql/log.cc sql/log_event.cc sql/log_event.h sql/log_event_old.cc sql/mysql_priv.h sql/mysqld.cc sql/rpl_record.cc sql/rpl_rli.h sql/rpl_utility.cc sql/rpl_utility.h sql/set_var.cc sql/set_var.h sql/share/errmsg.txt sql/sql_class.h sql/sql_select.cc storage/ndb/tools/restore/consumer_restore.cpp
[15 Feb 2010 14:19]
Bugs System
Pushed into 5.1.41-ndb-7.0.13 (revid:jonas@mysql.com-20100215135340-f74zahfeafxgnvkw) (version source revid:jonas@mysql.com-20100215135340-f74zahfeafxgnvkw) (merge vers: 5.1.41-ndb-7.0.13) (pib:16)
[15 Feb 2010 15:00]
Jonas Oreland
reclosing
[19 Feb 2010 13:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/100868 3412 Martin Skold 2010-02-19 [merge] Merge added: mysql-test/extra/rpl_tests/check_type.inc mysql-test/extra/rpl_tests/type_conversions.test mysql-test/suite/rpl/r/rpl_typeconv.result mysql-test/suite/rpl/r/rpl_typeconv_innodb.result mysql-test/suite/rpl/t/rpl_typeconv-slave.opt mysql-test/suite/rpl/t/rpl_typeconv.test mysql-test/suite/rpl/t/rpl_typeconv_innodb.test modified: .bzrignore client/Makefile.am client/mysqlbinlog.cc libmysqld/Makefile.am mysql-test/extra/rpl_tests/rpl_extraSlave_Col.test mysql-test/extra/rpl_tests/rpl_row_basic.test mysql-test/r/mysqlbinlog_row_innodb.result mysql-test/r/mysqlbinlog_row_myisam.result mysql-test/suite/ndb_team/r/rpl_ndb_extraColMaster.result mysql-test/suite/rpl/r/rpl_bug31076.result mysql-test/suite/rpl/r/rpl_colSize.result mysql-test/suite/rpl/r/rpl_extraCol_innodb.result mysql-test/suite/rpl/r/rpl_extraCol_myisam.result mysql-test/suite/rpl/r/rpl_extraColmaster_innodb.result mysql-test/suite/rpl/r/rpl_extraColmaster_myisam.result mysql-test/suite/rpl/r/rpl_row_basic_2myisam.result mysql-test/suite/rpl/r/rpl_row_basic_3innodb.result mysql-test/suite/rpl/r/rpl_row_colSize.result mysql-test/suite/rpl/r/rpl_row_tabledefs_2myisam.result mysql-test/suite/rpl/r/rpl_row_tabledefs_3innodb.result mysql-test/suite/rpl/t/rpl_bug31076.test mysql-test/suite/rpl/t/rpl_colSize.test mysql-test/suite/rpl/t/rpl_row_basic_3innodb.test mysql-test/suite/rpl_ndb/r/rpl_ndb_extraCol.result mysql-test/suite/rpl_ndb/r/rpl_row_basic_7ndb.result sql/field.cc sql/field.h sql/log.cc sql/log_event.cc sql/log_event.h sql/log_event_old.cc sql/mysql_priv.h sql/mysqld.cc sql/rpl_record.cc sql/rpl_rli.h sql/rpl_utility.cc sql/rpl_utility.h sql/set_var.cc sql/set_var.h sql/share/errmsg.txt sql/sql_class.h sql/sql_select.cc storage/ndb/tools/restore/consumer_restore.cpp
