ndb - bug#50640 - fix stdout/stderr printing in ndb_restore wrt rebuilding of indexes